[gd_scene load_steps=3 format=3 uid="uid://dl843g4dlw3wq"]

[ext_resource type="Script" uid="uid://b835mp3qk7ppi" path="res://ui/scripts/main_menu.gd" id="1_vve1r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3njx8"]
bg_color = Color(0.690196, 0.486275, 0.913725, 0.588235)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="main_menu" type="CanvasLayer"]
script = ExtResource("1_vve1r")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -539.0
offset_top = -290.0
offset_right = 2324.0
offset_bottom = 1393.0
color = Color(0.0313726, 1, 1, 1)

[node name="menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="inner_background" type="PanelContainer" parent="menu/margin_container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3njx8")

[node name="inner_container" type="VBoxContainer" parent="menu/margin_container/inner_background"]
layout_mode = 2

[node name="Control2" type="Control" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="button_container" type="MarginContainer" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="menu/margin_container/inner_background/inner_container/button_container"]
layout_mode = 2
theme_type_variation = &"custom_menu_button"
text = "New Game"

[node name="button_container2" type="MarginContainer" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="menu/margin_container/inner_background/inner_container/button_container2"]
layout_mode = 2
theme_type_variation = &"custom_menu_button"
text = "Level Select"

[node name="button_container3" type="MarginContainer" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="menu/margin_container/inner_background/inner_container/button_container3"]
layout_mode = 2
theme_type_variation = &"custom_menu_button"
text = "Options
"

[node name="Control3" type="Control" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="button_container4" type="MarginContainer" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Button" type="Button" parent="menu/margin_container/inner_background/inner_container/button_container4"]
layout_mode = 2
theme_type_variation = &"custom_menu_button"
text = "Quit"

[node name="Control" type="Control" parent="menu/margin_container/inner_background/inner_container"]
layout_mode = 2
size_flags_vertical = 3
